--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    font-family: "Apple SD Gothic Neo", sans-serif;
+    background-color: #f8f8f8 !important;
+}
