--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,6 +12,10 @@ h1{
     z-index: 10;
     top: 0;
     left: 0;
+    border-top-style: solid;
+    border-color: #6ad6ff;
+    border-top-width: 2px;
+    box-shadow: 0 2px 5px grey;
 
 }
 #header_content #menu{
@@ -19,22 +23,40 @@ h1{
     width: 600px;
     font-size: 16px;
     margin-left: 25px;
+    vertical-align: top;
 }
 #header_content{
     margin: 0 230px auto;
-    padding: 10px;
     width: 900px;
     height: 60px;
 
 }
-#header_content #menu a{
+#header_content #menu{
+    height: 58px;
+}
+#header_content a{
     color: grey;
+    height: 58px;
+    padding: 15px 5px;
+}
+#header_content #menu .left a{
+    display: block;
+}
+#header_content #logo a{
+    display: block;
+    padding: 7px 0;
 }
 #header_content #menu a span{
     margin: 0 15px;
 }
+#header_content #menu .left:hover #categories{
+    visibility: visible;
+}
+#menu .left a{
+    height: 58px;
+}
 #header_content #logo{
-    color: black;
+    height: 40px;
 }
 
 a, a:hover, a:link, a:active {
@@ -48,7 +70,12 @@ a, a:hover, a:link, a:active {
     float:left;
 }
 .right{
-    float:right
+    float:right;
+    height: 58px;
+}
+#menu .right div{
+    height: 58px;
+    padding: 15px 5px;
 }
 .section{
     background-color: #f8f8f8;
@@ -61,8 +88,8 @@ a, a:hover, a:link, a:active {
     height: 100%;
 }
 .card{
+    min-width: 1370px;
     background-color: #f8f8f8;
-    height: 90%;
 }
 .big_item{
     margin: 15px 45px;
@@ -72,10 +99,11 @@ a, a:hover, a:link, a:active {
     overflow: hidden;
 }
 .item{
-    margin: 15px 45px;
-    width: 170px;
-    height: 240px;
+    margin: 15px 25px;
+    width: 280px;
+    height: 450px;
     display: inline-block;
+    vertical-align: top;
 }
 .yellow{
     background-color: yellow;
@@ -107,7 +135,7 @@ a, a:hover, a:link, a:active {
 .slideshow-container {
     position: relative;
     margin: auto;
-    width: 100%;
+    width: 1370px;
     min-height: 650px;
 
 }
@@ -177,14 +205,14 @@ a, a:hover, a:link, a:active {
     height: 13px;
     width: 13px;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: skyblue;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
 }
 
 span.active, .dot:hover {
-    background-color: #717171;
+    background-color: #4b8bff;
 }
 
 
@@ -213,14 +241,223 @@ img {
     max-width: 100%;
     max-height: 100%;
 }
-.categories{
+.fit{
     display: block;
     width: 100%;
     height: 100%;
+}
+.categories{
     transform: scale(1);
     transition: opacity 0.3s, transform 0.3s;
 }
-.categories:hover{
+.big_item:hover .categories{
     transform: scale(1.05);
     opacity: 0.9;
+}
+.cover{
+    position: absolute;
+    display: table;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.counter_container{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    opacity: 0.8;
+    background-color: #ff8514;
+    padding : 5px 15px;
+    text-align: center;
+}
+.counter_container>div{
+    font-family: Ubuntu;
+    font-size: 1.25em;
+    display: inline-block;
+    color: white;
+}
+.counter_container>div:not(:last-child):after{
+    display: inline-block;
+    margin-top: 12px;
+    margin-left: 5px;
+    content: ":";
+    color: white;
+}
+.rel{
+    position: relative;
+}
+.categories_title{
+    font-family: Ubuntu, SansSerif;
+    font-weight: bold;
+    color: white;
+    font-size: 3em;
+}
+.mid{
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+button{
+    font-family: Ubuntu;
+    border-radius: 0;
+    border: none;
+}
+.categories_button{
+    font-weight: bold;
+    font-size: 1.5em;
+    margin-top: 30px;
+    padding: 15px 20px;
+    background-color: skyblue;
+    color: white;
+}
+.categories_button:hover{
+    background-color: white;
+    color: skyblue;
+}
+.main_title{
+    position: relative;
+    font-family: Ubuntu;
+    text-align: center;
+    font-weight: bold;
+    font-size: 2em;
+    margin-bottom: 30px;
+}
+.main_title:after{
+    position: absolute;
+    left: 48%;
+    top: 50px;
+    content: "";
+    height: 5px;
+    width: 68px;
+    background-color: skyblue;
+    display: block;
+}
+.item_info{
+    height: 120px;
+    text-align: center;
+    font-family: Ubuntu;
+
+}
+.item_img{
+    height: 330px;
+}
+.item_title{
+    letter-spacing: 0.6px;
+    margin-top: 15px;
+    padding: 5px 15px;
+    font-size: 1em;
+    color: #262626;
+    font-weight: bold;
+}
+.item_price{
+    padding: 5px 15px;
+    font-size: 2.5em;
+}
+.sale{
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    font-size: 1em;
+    text-align: center;
+}
+.new{
+    position: absolute;
+    padding: 2px 5px;
+    top: 15px;
+    right: 5px;
+    width: 50px;
+    height: 25px;
+    background-color: green;
+    color: white;
+    font-weight: bold;
+    font-size: 1em;
+    text-align: center;
+}
+.original{
+    margin-left: 5px;
+    font-size: 0.5em;
+    color: red;
+    text-decoration: line-through;
+}
+.current{
+
+}
+#footer{
+    min-width: 1350px;
+    height: 500px;
+    background-color: #f0fcff;
+    border-top-style: solid;
+    border-top-width: 2px;
+    border-top-color: #adaeff;
+}
+.container{
+    padding: 50px 10px;
+    margin: 0 auto;
+    vertical-align: top;
+    min-width: 1200px;
+}
+#footer .container .two:not(:last-child):after{
+    position: absolute;
+    top: 0;
+    right: 15px;
+    content: " ";
+    width: 1px;
+    height: 100%;
+    background-color: #4b8bff;
+}
+.two{
+    float:left;
+    width: 50%;
+    vertical-align: top;
+}
+.three{
+    float:left;
+    width: 33.33%;
+    vertical-align: top;
+}
+.customer{
+    font-weight: bold;
+    font-family: Ubuntu;
+    margin-bottom: 20px;
+}
+.number{
+    font-size: 2em;
+}
+.company_info{
+    margin-top: 20px;
+}
+.underline{
+    font-weight: bold;
+    font-size: 1.15em;
+    letter-spacing: 0.6px;
+    color: black;
+    margin-bottom: 10px;
+}
+.underline::after{
+    margin-top: 15px;
+    display: block;
+    content: " ";
+    width: 60px;
+    height: 3px;
+    background-color: #4b8bff;
+}
+
+#header_content #categories{
+    display: block;
+    position: absolute;
+    left: 200px;
+    width: 1000px;
+    height: 300px;
+    background-color: #f8f1ff;
+    visibility: hidden;
+
 }
